@@ -10,9 +10,9 @@
 
 @interface HRRootViewController : UIViewController
 
-@property (nonatomic, retain) IBOutlet UIBarButtonItem *C32ButtonItem;
-@property (retain, nonatomic) IBOutlet UIBarButtonItem *aboutBarButtonItem;
-@property (retain, nonatomic) IBOutlet UIBarButtonItem *toolsBarButtonItem;
+@property (nonatomic, strong) IBOutlet UIBarButtonItem *C32ButtonItem;
+@property (strong, nonatomic) IBOutlet UIBarButtonItem *aboutBarButtonItem;
+@property (strong, nonatomic) IBOutlet UIBarButtonItem *toolsBarButtonItem;
 
 - (IBAction)toolsButtonPressed:(id)sender;
 
